--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "date-fns": "^2.30.0",
+    "prettier": "3.2.5",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
