--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
+    "start": "webpack serve --open",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
@@ -23,9 +24,12 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "date-fns": "^2.30.0",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "prettier": "3.2.5",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0"
   }
 }
